--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ php:
   - 5.4
 
 #before_script: composer install
+env:
+  - SYMFONY_VERSION="3.0.*" DB=mysql
+  - SYMFONY_VERSION="3.1.*" DB=mysql
 
 script: phpunit tests/AppBundle/Util
