--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,22 @@
 language: php
 
 php:
-  - 5.3.3
-  - 5.3
   - 5.4
+  - 5.6
+  - 7.0
 
 #before_script: composer install
 env:
-  - SYMFONY_VERSION="3.0.*" DB=mysql
+  - SYMFONY_VERSION="2.8.*" DB=mysql
   - SYMFONY_VERSION="3.1.*" DB=mysql
+
+matrix:
+    include:
+    - php: 5.4
+      env: SYMFONY_VERSION="2.8.*" DB=mysql
+    - php: 5.6
+      env: SYMFONY_VERSION="3.1.*" DB=mysql
+    - php: 7.0
+      env: SYMFONY_VERSION="3.1.*" DB=mysql
 
 script: phpunit tests/AppBundle/Util
