--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ php:
   - 5.6
   - 7.0
 
-#before_script: composer install
 env:
   - SYMFONY_VERSION="2.8.*" DB=mysql
   - SYMFONY_VERSION="3.1.*" DB=mysql
+
+before_script: composer install
 
 matrix:
     exclude:
